codex-agent-runtime-desktop/native/c-api/include/codex_agent.h

typedef int32_t codex_agent_status_t;
typedef struct codex_agent_context codex_agent_context_t;
typedef struct codex_agent_mcp_oauth_configuration codex_agent_mcp_oauth_configuration_t;
typedef struct codex_agent_mcp_tool_configuration codex_agent_mcp_tool_configuration_t;
typedef struct codex_agent_mcp_transport codex_agent_mcp_transport_t;
typedef struct codex_agent_mcp_server_configuration codex_agent_mcp_server_configuration_t;
typedef struct codex_agent_mcp_server codex_agent_mcp_server_t;
typedef int32_t codex_agent_mcp_tool_approval_t;
typedef int32_t codex_agent_mcp_auth_status_t;
typedef int32_t codex_agent_mcp_authentication_t;
typedef int32_t codex_agent_mcp_tool_exposure_surface_t;
typedef int32_t codex_agent_resource_origin_t;
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_mcp_server_configuration_name_copy(
    codex_agent_context_t *context,
    codex_agent_mcp_server_configuration_t *configuration,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_mcp_server_configuration_transport(
    codex_agent_context_t *context,
    codex_agent_mcp_server_configuration_t *configuration,
    codex_agent_mcp_transport_t **out_transport);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_mcp_server_configuration_authentication(
    codex_agent_context_t *context,
    codex_agent_mcp_server_configuration_t *configuration,
    int32_t *out_has_authentication,
    codex_agent_mcp_authentication_t *out_authentication);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_mcp_server_configuration_environment_id_copy(
    codex_agent_context_t *context,
    codex_agent_mcp_server_configuration_t *configuration,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_mcp_server_configuration_is_enabled(
    codex_agent_context_t *context,
    codex_agent_mcp_server_configuration_t *configuration,
    int32_t *out_is_enabled);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_mcp_server_configuration_is_required(
    codex_agent_context_t *context,
    codex_agent_mcp_server_configuration_t *configuration,
    int32_t *out_is_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_mcp_server_configuration_supports_parallel_tool_calls(
    codex_agent_context_t *context,
    codex_agent_mcp_server_configuration_t *configuration,
    int32_t *out_supports_parallel_tool_calls);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_mcp_server_configuration_has_omit_tools_from(
    codex_agent_context_t *context,
    codex_agent_mcp_server_configuration_t *configuration,
    int32_t *out_has_omit_tools_from);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_mcp_server_configuration_omit_tools_from_count(
    codex_agent_context_t *context,
    codex_agent_mcp_server_configuration_t *configuration,
    size_t *out_count);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_mcp_server_configuration_omit_tools_from_at(
    codex_agent_context_t *context,
    codex_agent_mcp_server_configuration_t *configuration,
    size_t index,
    codex_agent_mcp_tool_exposure_surface_t *out_surface);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_mcp_server_configuration_startup_timeout_seconds(
    codex_agent_context_t *context,
    codex_agent_mcp_server_configuration_t *configuration,
    int32_t *out_has_value,
    double *out_value);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_mcp_server_configuration_tool_timeout_seconds(
    codex_agent_context_t *context,
    codex_agent_mcp_server_configuration_t *configuration,
    int32_t *out_has_value,
    double *out_value);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_mcp_server_configuration_default_tool_approval(
    codex_agent_context_t *context,
    codex_agent_mcp_server_configuration_t *configuration,
    int32_t *out_has_value,
    codex_agent_mcp_tool_approval_t *out_value);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_mcp_server_configuration_has_enabled_tools(
    codex_agent_context_t *context,
    codex_agent_mcp_server_configuration_t *configuration,
    int32_t *out_has_enabled_tools);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_mcp_server_configuration_enabled_tools_count(
    codex_agent_context_t *context,
    codex_agent_mcp_server_configuration_t *configuration,
    size_t *out_count);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_mcp_server_configuration_enabled_tool_copy_at(
    codex_agent_context_t *context,
    codex_agent_mcp_server_configuration_t *configuration,
    size_t index,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_mcp_server_configuration_has_disabled_tools(
    codex_agent_context_t *context,
    codex_agent_mcp_server_configuration_t *configuration,
    int32_t *out_has_disabled_tools);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_mcp_server_configuration_disabled_tools_count(
    codex_agent_context_t *context,
    codex_agent_mcp_server_configuration_t *configuration,
    size_t *out_count);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_mcp_server_configuration_disabled_tool_copy_at(
    codex_agent_context_t *context,
    codex_agent_mcp_server_configuration_t *configuration,
    size_t index,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_mcp_server_configuration_has_scopes(
    codex_agent_context_t *context,
    codex_agent_mcp_server_configuration_t *configuration,
    int32_t *out_has_scopes);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_mcp_server_configuration_scopes_count(
    codex_agent_context_t *context,
    codex_agent_mcp_server_configuration_t *configuration,
    size_t *out_count);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_mcp_server_configuration_scope_copy_at(
    codex_agent_context_t *context,
    codex_agent_mcp_server_configuration_t *configuration,
    size_t index,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_mcp_server_configuration_has_oauth(
    codex_agent_context_t *context,
    codex_agent_mcp_server_configuration_t *configuration,
    int32_t *out_has_oauth);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_mcp_server_configuration_oauth(
    codex_agent_context_t *context,
    codex_agent_mcp_server_configuration_t *configuration,
    codex_agent_mcp_oauth_configuration_t **out_oauth);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_mcp_server_configuration_has_oauth_resource(
    codex_agent_context_t *context,
    codex_agent_mcp_server_configuration_t *configuration,
    int32_t *out_has_oauth_resource);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_mcp_server_configuration_oauth_resource_copy(
    codex_agent_context_t *context,
    codex_agent_mcp_server_configuration_t *configuration,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_mcp_server_configuration_tools_count(
    codex_agent_context_t *context,
    codex_agent_mcp_server_configuration_t *configuration,
    size_t *out_count);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_mcp_server_configuration_tools_key_copy_at(
    codex_agent_context_t *context,
    codex_agent_mcp_server_configuration_t *configuration,
    size_t index,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_mcp_server_configuration_tools_value_at(
    codex_agent_context_t *context,
    codex_agent_mcp_server_configuration_t *configuration,
    size_t index,
    codex_agent_mcp_tool_configuration_t **out_tool_configuration);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_mcp_server_destroy(
    codex_agent_context_t *context,
    codex_agent_mcp_server_t **server);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_mcp_server_name_copy(
    codex_agent_context_t *context,
    codex_agent_mcp_server_t *server,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_mcp_server_display_name_copy(
    codex_agent_context_t *context,
    codex_agent_mcp_server_t *server,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_mcp_server_auth_status(
    codex_agent_context_t *context,
    codex_agent_mcp_server_t *server,
    codex_agent_mcp_auth_status_t *out_auth_status);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_mcp_server_has_configuration(
    codex_agent_context_t *context,
    codex_agent_mcp_server_t *server,
    int32_t *out_has_configuration);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_mcp_server_configuration(
    codex_agent_context_t *context,
    codex_agent_mcp_server_t *server,
    codex_agent_mcp_server_configuration_t **out_configuration);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_mcp_server_origin(
    codex_agent_context_t *context,
    codex_agent_mcp_server_t *server,
    codex_agent_resource_origin_t *out_origin);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_mcp_server_can_remove(
    codex_agent_context_t *context,
    codex_agent_mcp_server_t *server,
    int32_t *out_can_remove);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_mcp_server_is_authorized(
    codex_agent_context_t *context,
    codex_agent_mcp_server_t *server,
    int32_t *out_is_authorized);