codex-agent-bindings/csharp/src/CodexAgent/Interop/NativeMcpMethods.cs


    [LibraryImport(LibraryName, EntryPoint = "codex_agent_mcp_server_configuration_name_copy")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus McpServerConfigurationNameCopy(nint context, nint value, byte* buffer, nuint capacity, out nuint required);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_mcp_server_configuration_transport")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus McpServerConfigurationTransport(nint context, nint value, out nint transport);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_mcp_server_configuration_authentication")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus McpServerConfigurationAuthentication(nint context, nint value, out int hasValue, out CodexMcpAuthentication authentication);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_mcp_server_configuration_environment_id_copy")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus McpServerConfigurationEnvironmentIdCopy(nint context, nint value, byte* buffer, nuint capacity, out nuint required);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_mcp_server_configuration_is_enabled")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus McpServerConfigurationIsEnabled(nint context, nint value, out int result);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_mcp_server_configuration_is_required")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus McpServerConfigurationIsRequired(nint context, nint value, out int result);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_mcp_server_configuration_supports_parallel_tool_calls")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus McpServerConfigurationSupportsParallelToolCalls(nint context, nint value, out int result);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_mcp_server_configuration_has_omit_tools_from")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus McpServerConfigurationHasOmitToolsFrom(nint context, nint value, out int hasValue);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_mcp_server_configuration_omit_tools_from_count")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus McpServerConfigurationOmitToolsFromCount(nint context, nint value, out nuint count);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_mcp_server_configuration_omit_tools_from_at")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus McpServerConfigurationOmitToolsFromAt(nint context, nint value, nuint index, out CodexMcpToolExposureSurface surface);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_mcp_server_configuration_startup_timeout_seconds")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus McpServerConfigurationStartupTimeoutSeconds(nint context, nint value, out int hasValue, out double result);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_mcp_server_configuration_tool_timeout_seconds")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus McpServerConfigurationToolTimeoutSeconds(nint context, nint value, out int hasValue, out double result);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_mcp_server_configuration_default_tool_approval")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus McpServerConfigurationDefaultToolApproval(nint context, nint value, out int hasValue, out CodexMcpToolApproval result);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_mcp_server_configuration_has_enabled_tools")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus McpServerConfigurationHasEnabledTools(nint context, nint value, out int hasValue);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_mcp_server_configuration_enabled_tools_count")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus McpServerConfigurationEnabledToolsCount(nint context, nint value, out nuint count);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_mcp_server_configuration_enabled_tool_copy_at")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus McpServerConfigurationEnabledToolCopyAt(nint context, nint value, nuint index, byte* buffer, nuint capacity, out nuint required);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_mcp_server_configuration_has_disabled_tools")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus McpServerConfigurationHasDisabledTools(nint context, nint value, out int hasValue);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_mcp_server_configuration_disabled_tools_count")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus McpServerConfigurationDisabledToolsCount(nint context, nint value, out nuint count);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_mcp_server_configuration_disabled_tool_copy_at")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus McpServerConfigurationDisabledToolCopyAt(nint context, nint value, nuint index, byte* buffer, nuint capacity, out nuint required);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_mcp_server_configuration_has_scopes")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus McpServerConfigurationHasScopes(nint context, nint value, out int hasValue);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_mcp_server_configuration_scopes_count")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus McpServerConfigurationScopesCount(nint context, nint value, out nuint count);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_mcp_server_configuration_scope_copy_at")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus McpServerConfigurationScopeCopyAt(nint context, nint value, nuint index, byte* buffer, nuint capacity, out nuint required);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_mcp_server_configuration_has_oauth")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus McpServerConfigurationHasOauth(nint context, nint value, out int hasValue);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_mcp_server_configuration_oauth")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus McpServerConfigurationOauth(nint context, nint value, out nint oauth);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_mcp_server_configuration_has_oauth_resource")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus McpServerConfigurationHasOauthResource(nint context, nint value, out int hasValue);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_mcp_server_configuration_oauth_resource_copy")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus McpServerConfigurationOauthResourceCopy(nint context, nint value, byte* buffer, nuint capacity, out nuint required);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_mcp_server_configuration_tools_count")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus McpServerConfigurationToolsCount(nint context, nint value, out nuint count);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_mcp_server_configuration_tools_key_copy_at")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus McpServerConfigurationToolsKeyCopyAt(nint context, nint value, nuint index, byte* buffer, nuint capacity, out nuint required);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_mcp_server_configuration_tools_value_at")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus McpServerConfigurationToolsValueAt(nint context, nint value, nuint index, out nint configuration);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_mcp_server_destroy")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus McpServerDestroy(nint context, ref nint value);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_mcp_server_name_copy")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus McpServerNameCopy(nint context, nint value, byte* buffer, nuint capacity, out nuint required);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_mcp_server_display_name_copy")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus McpServerDisplayNameCopy(nint context, nint value, byte* buffer, nuint capacity, out nuint required);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_mcp_server_auth_status")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus McpServerAuthStatus(nint context, nint value, out CodexMcpAuthStatus status);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_mcp_server_has_configuration")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus McpServerHasConfiguration(nint context, nint value, out int hasValue);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_mcp_server_configuration")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus McpServerConfiguration(nint context, nint value, out nint configuration);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_mcp_server_origin")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus McpServerOrigin(nint context, nint value, out CodexResourceOrigin origin);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_mcp_server_can_remove")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus McpServerCanRemove(nint context, nint value, out int result);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_mcp_server_is_authorized")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus McpServerIsAuthorized(nint context, nint value, out int result);
}
